🐛 fix layout bug

--- a/src/styles/components/layout.scss
+++ b/src/styles/components/layout.scss
@@ -17,5 +17,6 @@
     background: $color-background-bright;
     border-radius: 20px;
     overflow-x: hidden;
+    overflow-y: hidden;
   }
 }
