--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -22,6 +22,7 @@
   .dw-home__todo-list {
     display: flex;
     flex-direction: column;
+    margin-bottom: 61px;
 
     .dw-home__todo-list__existing-todo,
     .dw-home__todo-list__new-todo {
